public/personal-website/istio/resources/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: personal-website
  namespace: personal-website
spec:
  hosts:
    - 'nix.sol.milkyway'
    - 'tjzimmerman.com'
    - 'tjzimmerman.dev'
    - 'www.tjzimmerman.com'
    - 'www.tjzimmerman.dev'
  gateways:
    - 'istio-gateway/personal-website'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: personal-website
            port:
              number: 80
